RESOLVED FIXED150319
[GTK] ASSERTION FAILED: parent in WebInspectorProxy::platformDetach()
https://bugs.webkit.org/show_bug.cgi?id=150319
Summary [GTK] ASSERTION FAILED: parent in WebInspectorProxy::platformDetach()
Carlos Garcia Campos
Reported 2015-10-19 02:25:03 PDT
This happens when the inspector is shown/closed very quickly. Since we start the inspector attached by default, when the web inspector is created m_isAttached is set to true, so that when opened, it's attached to the view. If the inspector is closed before it has been actually attached, the inspector view doesn't have a parent, even if the m_isAttached is true. So, we should handle this case instead of asserting. This is what happens in test http/tests/xmlhttprequest/access-control-repeated-failed-preflight-crash.html 20:06:18.123 27815 ASSERTION FAILED: parent 20:06:18.123 27815 ../../Source/WebKit2/UIProcess/gtk/WebInspectorProxyGtk.cpp(315) : void WebKit::WebInspectorProxy::platformDetach() 20:06:18.123 27815 1 0x2b9f2c454d43 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(WTFCrash+0x1e) [0x2b9f2c454d43] 20:06:18.123 27815 2 0x2b9f31e25f25 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN6WebKit17WebInspectorProxy14platformDetachEv+0xa7) [0x2b9f31e25f25] 20:06:18.123 27815 3 0x2b9f31a3c151 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN6WebKit17WebInspectorProxy8didCloseEv+0xb7) [0x2b9f31a3c151] 20:06:18.123 27815 4 0x2b9f31e8487f /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN3IPC22callMemberFunctionImplIN6WebKit17WebInspectorProxyEMS2_FvvESt5tupleIIEEIEEEvPT_T0_OT1_St14index_sequenceIIXspT2_EEE+0x65) [0x2b9f31e8487f] 20:06:18.123 27815 5 0x2b9f31e84393 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN3IPC18callMemberFunctionIN6WebKit17WebInspectorProxyEMS2_FvvESt5tupleIIEESt19make_index_sequenceILm0EEEEvOT1_PT_T0_+0x41) [0x2b9f31e84393] 20:06:18.123 27815 6 0x2b9f31e838a8 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN3IPC13handleMessageIN8Messages17WebInspectorProxy8DidCloseEN6WebKit17WebInspectorProxyEMS5_FvvEEEvRNS_14MessageDecoderEPT0_T1_+0x8f) [0x2b9f31e838a8] 20:06:18.123 27815 7 0x2b9f31e82ea9 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN6WebKit17WebInspectorProxy17didReceiveMessageERN3IPC10ConnectionERNS1_14MessageDecoderE+0x11f) [0x2b9f31e82ea9] 20:06:18.123 27815 8 0x2b9f3194bb02 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN3IPC18MessageReceiverMap15dispatchMessageERNS_10ConnectionERNS_14MessageDecoderE+0x120) [0x2b9f3194bb02] 20:06:18.123 27815 9 0x2b9f31967d09 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN6WebKit17ChildProcessProxy15dispatchMessageERN3IPC10ConnectionERNS1_14MessageDecoderE+0x2f) [0x2b9f31967d09] 20:06:18.123 27815 10 0x2b9f31ac8fdb /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN6WebKit15WebProcessProxy17didReceiveMessageERN3IPC10ConnectionERNS1_14MessageDecoderE+0x2b) [0x2b9f31ac8fdb] 20:06:18.123 27815 11 0x2b9f319391f0 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN3IPC10Connection15dispatchMessageERNS_14MessageDecoderE+0x3a) [0x2b9f319391f0] 20:06:18.123 27815 12 0x2b9f31939353 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN3IPC10Connection15dispatchMessageESt10unique_ptrINS_14MessageDecoderESt14default_deleteIS2_EE+0x161) [0x2b9f31939353] 20:06:18.123 27815 13 0x2b9f3193953a /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(_ZN3IPC10Connection18dispatchOneMessageEv+0xc8) [0x2b9f3193953a] 20:06:18.123 27815 14 0x2b9f3193903e /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0x488903e) [0x2b9f3193903e] 20:06:18.123 27815 15 0x2b9f3193a7f9 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libwebkit2gtk-4.0.so.37(+0x488a7f9) [0x2b9f3193a7f9] 20:06:18.123 27815 16 0x46cdae /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/Debug/bin/WebKitTestRunner(_ZNKSt8functionIFvvEEclEv+0x32) [0x46cdae] 20:06:18.123 27815 17 0x2b9f2c46e72c /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(_ZN3WTF7RunLoop11performWorkEv+0x1b8) [0x2b9f2c46e72c] 20:06:18.123 27815 18 0x2b9f2c4aa992 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(+0x1830992) [0x2b9f2c4aa992] 20:06:18.123 27815 19 0x2b9f2c4aaf1a /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(+0x1830f1a) [0x2b9f2c4aaf1a] 20:06:18.123 27815 20 0x46cdae /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/Debug/bin/WebKitTestRunner(_ZNKSt8functionIFvvEEclEv+0x32) [0x46cdae] 20:06:18.123 27815 21 0x2b9f2c4a890d /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(_ZN3WTF15GMainLoopSource12voidCallbackEv+0x6d) [0x2b9f2c4a890d] 20:06:18.123 27815 22 0x2b9f2c4a9011 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(_ZN3WTF15GMainLoopSource18voidSourceCallbackEPS0_+0x23) [0x2b9f2c4a9011] 20:06:18.123 27815 23 0x2b9f385d13a5 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/DependenciesGTK/Root/lib64/libglib-2.0.so.0(+0x563a5) [0x2b9f385d13a5] 20:06:18.123 27815 24 0x2b9f385cea26 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/DependenciesGTK/Root/lib64/libglib-2.0.so.0(+0x53a26) [0x2b9f385cea26] 20:06:18.123 27815 25 0x2b9f385cf854 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/DependenciesGTK/Root/lib64/libglib-2.0.so.0(g_main_context_dispatch+0x33) [0x2b9f385cf854] 20:06:18.123 27815 26 0x2b9f385cfa39 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/DependenciesGTK/Root/lib64/libglib-2.0.so.0(+0x54a39) [0x2b9f385cfa39] 20:06:18.123 27815 27 0x2b9f385cfe60 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/DependenciesGTK/Root/lib64/libglib-2.0.so.0(g_main_loop_run+0x1d7) [0x2b9f385cfe60] 20:06:18.123 27815 28 0x2b9f2c4aa7f6 /home/slave/webkitgtk/gtk-linux-64-debug/build/WebKitBuild/Debug/lib/libjavascriptcoregtk-4.0.so.18(_ZN3WTF7RunLoop3runEv+0xac) [0x2b9f2c4aa7f6] 20:06:18.123 27815 29 0x48c499 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/Debug/bin/WebKitTestRunner(_ZN3WTR14TestController16platformRunUntilERbd+0xdb) [0x48c499] 20:06:18.123 27815 30 0x46533a /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/Debug/bin/WebKitTestRunner(_ZN3WTR14TestController8runUntilERbd+0x52) [0x46533a] 20:06:18.123 27815 31 0x472c77 /home/slave/webkitgtk/gtk-linux-64-debug-tests/build/WebKitBuild/Debug/bin/WebKitTestRunner(_ZN3WTR14TestInvocation6invokeEv+0x49f) [0x472c77]
Attachments
Patch (2.30 KB, patch)
2015-10-19 02:28 PDT, Carlos Garcia Campos
zan: review+
Carlos Garcia Campos
Comment 1 2015-10-19 02:28:23 PDT
Carlos Garcia Campos
Comment 2 2015-10-19 02:49:59 PDT
Note You need to log in before you can comment on or make changes to this bug.